# TalkLess

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .qmlls.ini  CMakeLists.txt  FileDropArea_lint.txt  LICENSE  Main.qml  QT6_INTEGRATION.md  README.md  buildCommand.txt  build_error.txt  build_output.txt  clear_data.bat  clear_settings.cpp  cmake_output.txt  colors_list.txt  vcpkg.json
.agent/workflows/: build-and-run.md
.github/workflows/: ci.yml  release.yml
.qt/qml_imports/: appTalkLess_build.rsp  appTalkLess_conf.rsp
.qt/rcc/: appTalkLess_raw_qml_0.qrc  appTalkLess_raw_res_0.qrc  qmake_TalkLess.qrc
TalkLess/: Main.qml  appTalkLess_qml_module_dir_map.qrc  qmldir
TalkLess/qml/components/: ActionButton.qml  AddAudioTile.qml  DropdownSelector.qml  GradientButton.qml  HeaderBar.qml  SettingsDropdown.qml  SettingsPanel.qml  SettingsTabSelector.qml  SettingsToggle.qml  Sidebar.qml  VolumeMeter.qml  VolumeMeterSlider.qml
TalkLess/qml/pages/: ApplicationSettingsView.qml  AudioPlaybackView.qml  SoundboardView.qml
TalkLess/qml/styles/: Theme.qml  Typography.qml
TalkLess/qml/utils/: Functions.qml
config/: README.md
dependancies/soloud/src/audiosource/wav/: stb_vorbis_impl.cpp
docs/: README.md  REPRODUCTION_MODES.md  REPRODUCTION_MODES_COMPLETE.md  architecture.md  mvc-architecture.md
macos/: Info.plist
qml/components/: ActionButton.qml  AddAudioCard.qml  AddAudioContent.qml  AddAudioPanel.qml  AddAudioTile.qml  AudioCard.qml  AudioClipPanel.qml  AudioDetailsPanel.qml  AudioPanelTabs.qml  AudioPlaybackSlot.qml  AudioPlayer.qml  AudioPlayerCard.qml  AudioTag.qml  BackgroundBanner.qml  BalanceSlider.qml  ClipTile.qml  DetachedSoundboardWindow.qml  DotMeter.qml  DropdownSelect.qml  DropdownSelector.qml  FeatureToggleItem.qml  FileDropArea.qml  GradientButton.qml  HeaderBar.qml  HotkeyCapturePopup.qml  HotkeyItem.qml  HotkeysTable.qml  LabeledSlider.qml  MetersPanel.qml  RecordAudioContent.qml  SettingsDropdown.qml  SettingsHeader.qml  SettingsImportExport.qml  SettingsPanel.qml  SettingsTabBar.qml  SettingsTabSelector.qml  SettingsToggle.qml  Sidebar.qml  SidebarItem.qml  SoundboardListItem.qml  (+9 more)
qml/pages/: ApplicationSettingsView.qml  AudioDevicesTab.qml  AudioPlaybackView.qml  AuthView.qml  BackupRestorePage.qml  FeaturesTab.qml  HotkeysTab.qml  LoginPage.qml  SettingsManagementPage.qml  SignupPage.qml  SoundboardPage.qml  SoundboardView.qml  StatisticsReportingView.qml  SystemSettingsPage.qml  UIDisplayTab.qml  UpdatesTab.qml  VolumeMixerPage.qml
qml/styles/: Colors.qml
qml/utils/: Functions.js  Functions.qml
src/: audioEngine.cpp  audioEngine.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  main.cpp  main_ui_only.cpp  miniaudio_impl.cpp  miniaudio_vorbis.cpp  miniaudio_vorbis.h  noiseSuppressor.cpp  noiseSuppressor.h
src/controllers/: audiomanager.cpp  audiomanager.h  hotkeymanager.cpp  hotkeymanager.h  hotkeyvalidator.cpp  hotkeyvalidator.h  maincontroller.cpp  maincontroller.h  settingsmanager.cpp  settingsmanager.h
src/models/: AppSettings.h  AppState.h  audioEngine.cpp  audioEngine.h  audioclip.cpp  audioclip.h  clip.h  soundboard.h  soundboardInfo.h  soundboardsection.cpp  soundboardsection.h
src/qmlmodels/: clipsListModel.cpp  clipsListModel.h  hotkeysModel.cpp  hotkeysModel.h  soundboardsListModel.cpp  soundboardsListModel.h
src/services/: ApiClient.cpp  ApiClient.h  TranscriptionService.cpp  TranscriptionService.h  soundboardService.cpp  soundboardService.h  storageRepository.cpp  storageRepository.h
src/view/: audioplayerview.cpp  audioplayerview.h  soundboardview.cpp  soundboardview.h
